[gd_scene load_steps=7 format=2]

[ext_resource path="res://Font/basic_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://NetworkSetup.gd" type="Script" id=2]
[ext_resource path="res://Asset/spritesheet_ground.png" type="Texture" id=3]
[ext_resource path="res://UI.gd" type="Script" id=4]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="TileSet" id=1]
0/name = "spritesheet_ground.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="NetworkSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerConfig" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerConfig"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -123.0
margin_right = 250.0
margin_bottom = 123.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameTextEdit" type="LineEdit" parent="MultiplayerConfig/VBoxContainer"]
margin_right = 500.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "Enter Username"

[node name="CreateServerButton" type="Button" parent="MultiplayerConfig/VBoxContainer"]
margin_top = 98.0
margin_right = 500.0
margin_bottom = 152.0
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinServerButton" type="Button" parent="MultiplayerConfig/VBoxContainer"]
margin_top = 192.0
margin_right = 500.0
margin_bottom = 246.0
custom_fonts/font = ExtResource( 1 )
text = " Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="DeviceIP" type="Label" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="UI"]
margin_left = 64.0
margin_top = 47.0
margin_right = 162.0
margin_bottom = 101.0
rect_min_size = Vector2( 300, 150 )
custom_fonts/font = ExtResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, 0, 0, 0, 15, 0, 0, 65536, 0, 0, 65551, 0, 0, 131072, 0, 0, 131087, 0, 0, 196608, 0, 0, 196623, 0, 0, 262144, 0, 0, 262159, 0, 0, 327680, 0, 0, 327695, 0, 0, 393216, 0, 0, 393231, 0, 0, 458752, 0, 0, 458767, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0 )

[connection signal="pressed" from="MultiplayerConfig/VBoxContainer/CreateServerButton" to="." method="_on_CreateServerButton_pressed"]
[connection signal="pressed" from="MultiplayerConfig/VBoxContainer/JoinServerButton" to="." method="_on_JoinServerButton_pressed"]
[connection signal="pressed" from="UI/StartGameButton" to="." method="_on_StartGameButton_pressed"]
